--- a/css/style.less
+++ b/css/style.less
@@ -25,8 +25,16 @@ body {
 	.column(12);
 }
 
+#comments {
+	.column(12);
+}
+
 @media screen and (min-width: 1024px) {
 	#primary-content {
+		.column(8);
+	}
+	
+	#comments {
 		.column(8);
 	}
 	
