--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   font: 100% normal;
 }
 #container {
-  margin: 36px auto;
+  margin: 2.25em auto;
   width: 90%;
 }
 #primary-content {
@@ -26,13 +26,29 @@ body {
   width: 97.91666666666666%;
   margin: 0 1.0416666666666665%;
 }
-@media screen and (min-width: 1024px) {
+aside {
+  display: inline;
+  float: left;
+  overflow: hidden;
+  width: 97.91666666666666%;
+  margin: 0 1.0416666666666665%;
+}
+footer {
+  display: inline;
+  float: left;
+  overflow: hidden;
+  width: 97.91666666666666%;
+  margin: 0 1.0416666666666665%;
+  margin: 0 3.75em;
+}
+@media screen and (min-width: 768px) {
   #primary-content {
     display: inline;
     float: left;
     overflow: hidden;
     width: 64.58333333333334%;
     margin: 0 1.0416666666666665%;
+    margin-right: 3.75em;
   }
   #comments {
     display: inline;
@@ -40,12 +56,36 @@ body {
     overflow: hidden;
     width: 64.58333333333334%;
     margin: 0 1.0416666666666665%;
+    margin-right: 3.75em;
   }
   aside {
     display: inline;
     float: left;
     overflow: hidden;
-    width: 31.25%;
+    width: 22.916666666666664%;
+    margin: 0 1.0416666666666665%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  #primary-content {
+    display: inline;
+    float: left;
+    overflow: hidden;
+    width: 72.91666666666666%;
+    margin: 0 1.0416666666666665%;
+  }
+  #comments {
+    display: inline;
+    float: left;
+    overflow: hidden;
+    width: 72.91666666666666%;
+    margin: 0 1.0416666666666665%;
+  }
+  aside {
+    display: inline;
+    float: left;
+    overflow: hidden;
+    width: 22.916666666666664%;
     margin: 0 1.0416666666666665%;
   }
 }
