few notes on future plans and basic style for responsive images

--- a/css/style.less
+++ b/css/style.less
@@ -16,6 +16,12 @@ body {
 	font: 100% normal;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
+
 #container {
 	margin: 2.25em auto;
 	width: 90%;
