--- a/css/style.css
+++ b/css/style.css
@@ -8,56 +8,82 @@ body {
 body {
   font: 100% normal;
 }
+img {
+  max-width: 100%;
+  height: auto;
+  width: auto\9;
+  /* ie8 */
+
+}
 #container {
   margin: 2.25em auto;
   width: 90%;
   overflow: auto;
 }
+#masthead {
+  display: inline;
+  float: left;
+  overflow: hidden;
+  width: 81.25%;
+  margin: 0 1.0416666666666665%;
+  margin: 0 2em;
+}
 #primary-content {
   display: inline;
   float: left;
   overflow: hidden;
-  width: 97.91666666666666%;
+  width: 81.25%;
   margin: 0 1.0416666666666665%;
+  margin: 0 2em;
 }
 #comments {
   display: inline;
   float: left;
   overflow: hidden;
-  width: 97.91666666666666%;
+  width: 81.25%;
   margin: 0 1.0416666666666665%;
+  margin: 0 2em;
 }
 aside {
   display: inline;
   float: left;
   overflow: hidden;
-  width: 97.91666666666666%;
+  width: 81.25%;
   margin: 0 1.0416666666666665%;
+  margin: 0 2em;
 }
 footer {
   display: inline;
   float: left;
   overflow: hidden;
-  width: 97.91666666666666%;
+  width: 81.25%;
   margin: 0 1.0416666666666665%;
-  margin: 0 3.75em;
+  margin: 0 2em;
 }
 @media screen and (min-width: 768px) {
+  #masthead {
+    display: inline;
+    float: left;
+    overflow: hidden;
+    width: 56.25%;
+    margin: 0 1.0416666666666665%;
+    margin: 0 2.5em;
+  }
   #primary-content {
     display: inline;
     float: left;
     overflow: hidden;
-    width: 64.58333333333334%;
+    width: 56.25%;
     margin: 0 1.0416666666666665%;
-    margin-right: 3.75em;
+    margin: 0 2.5em;
   }
   #comments {
     display: inline;
     float: left;
     overflow: hidden;
-    width: 64.58333333333334%;
+    width: 56.25%;
     margin: 0 1.0416666666666665%;
-    margin-right: 3.75em;
+    margin: 0 2.5em;
   }
   aside {
     display: inline;
@@ -68,25 +94,35 @@ footer {
   }
 }
 @media screen and (min-width: 1200px) {
+  #masthead {
+    display: inline;
+    float: left;
+    overflow: hidden;
+    width: 65%;
+    margin: 0 0.8333333333333334%;
+    margin: 0 3.75em;
+  }
   #primary-content {
     display: inline;
     float: left;
     overflow: hidden;
-    width: 72.91666666666666%;
-    margin: 0 1.0416666666666665%;
+    width: 65%;
+    margin: 0 0.8333333333333334%;
+    margin: 0 3.75em;
   }
   #comments {
     display: inline;
     float: left;
     overflow: hidden;
-    width: 72.91666666666666%;
-    margin: 0 1.0416666666666665%;
+    width: 65%;
+    margin: 0 0.8333333333333334%;
+    margin: 0 3.75em;
   }
   aside {
     display: inline;
     float: left;
     overflow: hidden;
-    width: 22.916666666666664%;
-    margin: 0 1.0416666666666665%;
+    width: 18.333333333333332%;
+    margin: 0 0.8333333333333334%;
   }
 }
