--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ footer {
   margin: 0 2em;
 }
 @media screen and (max-width: 620px) {
+  #masthead hgroup {
+    text-align: center;
+  }
   #masthead nav ul {
     border-top: 1px solid #ddd;
     padding: 0;
