--- a/css/layla.css
+++ b/css/layla.css
@@ -107,7 +107,40 @@ a:hover {
 	color: #999;
 }
 
+/* Layla Specific Responsive Code
+-----------------------------------------------*/
 
+@media screen and (max-width: 620px) {
+  #masthead hgroup {
+    text-align: center;
+  }
+  #masthead nav ul {
+    border-top: 1px solid #ddd;
+    padding: 0;
+  }
+  #masthead nav li {
+    width: 100%;
+    margin:0;
+    float: none;
+    background-color: #F0F0F0;
+    text-align: center;
+  }
+  #masthead nav li a {
+    width: 100%;
+    margin: 0;
+    padding: 12px 0 11px;
+    float: left;
+    display: block;
+    background-color: #F0F0F0;
+    border-bottom: 1px solid #ddd;
+  }
+  #masthead nav li a:active, 
+  #masthead nav li a:focus, 
+  #masthead nav li a:hover {
+    text-decoration: none;
+    background-color: #D4D4D4 !important;
+  }
+}
 
 
 
