--- a/css/style.less
+++ b/css/style.less
@@ -48,7 +48,7 @@ aside {
 	margin: 0 2em;	
 }
 
-footer {
+#colophon {
 	.column(10);
 	margin: 0 2em;
 }
@@ -98,10 +98,17 @@ footer {
 	#comments {
 		.column(10);
 		margin:0 2.5em;
+		.column(9);
+		margin:0 3.75em;
+	}
+	
+	#comments {
+		.column(9);
+		margin:0 3.75em;
 	}
 	
 	aside {
-		.column(3);
+		.column(4);
 	}
 }
 	
