correct section id for page templates

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ aside {
   margin: 0 1.0416666666666665%;
   margin: 0 2em;
 }
-footer {
+#colophon {
   display: inline;
   float: left;
   overflow: hidden;
