--- a/css/style.less
+++ b/css/style.less
@@ -60,6 +60,11 @@ aside {
 		margin:0 2.5em;
 	}
 	
+	.display_page #primary-content {
+		.column(10);
+		margin:0 2.5em;
+	}
+	
 	#primary-content {
 		.column(7);
 		margin:0 2.5em;
@@ -89,6 +94,10 @@ aside {
 		margin:0 3.75em;
 	}
 	
+	.display_page #primary-content {
+		.column(13);
+		margin:0 3.75em;
+	}
 	
 	#primary-content {
 		.column(9);
