--- a/css/style.less
+++ b/css/style.less
@@ -60,6 +60,11 @@ aside {
 		margin:0 2.5em;
 	}
 	
+	.display_page #primary-content {
+		.column(10);
+		margin:0 2.5em;
+	}
+	
 	#primary-content {
 		.column(7);
 		margin:0 2.5em;
@@ -89,8 +94,13 @@ aside {
 		margin:0 2.5em;
 	}
 	
+	.display_page #primary-content {
+		.column(13);
+		margin:0 3.75em;
+	}
 	
 	#primary-content {
+
 		.column(10);
 		margin:0 2.5em;
 	}
@@ -103,6 +113,13 @@ aside {
 	}
 	
 	#comments {
+
+		.column(9);
+		margin:0 3.75em;
+	}
+	
+	#comments {
+
 		.column(9);
 		margin:0 3.75em;
 	}
