--- a/css/layla.css
+++ b/css/layla.css
@@ -92,54 +92,48 @@ a:hover {
 /*  Nav
 ----------------------------------------------*/
 
-#masthead nav ul li {
-	display: inline;
-	margin-right: 2em;
-}
-
-#masthead nav ul li a {
-	padding: .25em;
-	text-transform: uppercase;
-}
-
 #masthead nav ul li a:hover {
 	background:#F0F0F0;
 	color: #999;
 }
 
-/* Layla Specific Responsive Code
------------------------------------------------*/
-
-@media screen and (max-width: 620px) {
-  #masthead hgroup {
-    text-align: center;
-  }
-  #masthead nav ul {
+#masthead nav ul {
     border-top: 1px solid #ddd;
     padding: 0;
   }
-  #masthead nav li {
-    width: 100%;
-    margin:0;
-    float: none;
+
+#masthead nav li {
     background-color: #F0F0F0;
-    text-align: center;
   }
-  #masthead nav li a {
-    width: 100%;
-    margin: 0;
-    padding: 12px 0 11px;
-    float: left;
-    display: block;
-    background-color: #F0F0F0;
+
+#masthead nav li a {
+    background: #F0F0F0;
     border-bottom: 1px solid #ddd;
   }
-  #masthead nav li a:active, 
+
+#masthead nav li a:active, 
   #masthead nav li a:focus, 
   #masthead nav li a:hover {
     text-decoration: none;
-    background-color: #D4D4D4 !important;
+    background: #D4D4D4 ;
   }
+
+@media screen and (min-width: 480px) {
+	
+	#masthead nav ul {
+		border: none;
+	}
+	
+	#masthead nav li a {
+		background: none;
+		border: none;
+	}
+
+	#masthead nav ul li a:active, 
+	  #masthead nav li a:focus, 
+	  #masthead nav li a:hover {
+	  background: none;
+	  }
 }
 
 /*  Comment Form
