bad TextExpander, bad keyboard shortcut

--- a/css/layout.css
+++ b/css/layout.css
@@ -60,8 +60,8 @@ aside {
   margin: 0 1.0416666666666665%;
   margin: 0 2em;
 }
-/*  Nav
--------------------------------------------*/#masthead hgroup {
+/*  Nav */
+#masthead hgroup {
   text-align: center;
 }
 #masthead nav li {
