--- a/css/layout.less
+++ b/css/layout.less
@@ -30,27 +30,26 @@ img {
 
 #masthead {
 	.column(10);
-	margin: 0 2em;
 }
 
 #primary-content {
 	.column(10);
-	margin: 0 2em;
+	
 }
 
 #comments {
 	.column(10);
-	margin: 0 2em;
+	
 }
 
 aside {
 	.column(10);
-	margin: 0 2em;	
+		
 }
 
 #colophon {
 	.column(10);
-	margin: 0 2em;
+	
 }
 
 /*  Nav
@@ -91,26 +90,27 @@ aside {
 	
 	#masthead {
 		.column(7);
-		margin:0 2.5em;
+		
 	}
 	
 	.display_page #primary-content {
 		.column(10);
-		margin:0 2.5em;
+		
 	}
 	
 	#primary-content {
-		.column(7);
-		margin:0 2.5em;
+		.column(8);
+		
 	}
 	
 	#comments {
 		.column(7);
-		margin:0 2.5em;
+		
 	}
 	
 	aside {
 		.column(3);
+		.offset(1);
 	}
 }
 
@@ -125,26 +125,27 @@ aside {
 	
 	#masthead {
 		.column(10);
-		margin:0 3.75em;
+		
 	}
 	
 	.display_page #primary-content {
 		.column(13);
-		margin:0 3.75em;
+		.offset(1);		
 	}
 	
 	#primary-content {
-		.column(9);
-		margin:0 3.75em;
+		.column(10);
+		
 	}
 	
 	#comments {
 		.column(9);
-		margin:0 3.75em;
+		
 	}
 	
 	aside {
 		.column(4);
+		.offset(1);
 	}
 }
 	
