--- a/css/defaults.less
+++ b/css/defaults.less
@@ -1,7 +1,4 @@
-@import 'variables-mixins.less';
-
-
-
+ 
 a, a:visited {
 	color: @LinkColor;
 }
@@ -24,4 +21,10 @@ h1 a:hover, h2 a:hover {
 
 .right {
 	float: right;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
 }
