Revert "remove stray less function"
This reverts commit 9fc585c18f94a7a5829b5636fe2a2ec83b6293af.

--- a/css/defaults.less
+++ b/css/defaults.less
@@ -1,4 +1,7 @@
- 
+@import 'variables-mixins.less';
+
+
+
 a, a:visited {
 	color: @LinkColor;
 }
@@ -21,10 +24,4 @@ h1 a:hover, h2 a:hover {
 
 .right {
 	float: right;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    width: auto\9; /* ie8 */
 }
