--- a/css/layout.less
+++ b/css/layout.less
@@ -1,9 +1,21 @@
+/*  Custom Style Sheet for Mzingi v2.0 
+	by Michael Bishop http://miklb.com
+*/
+
+@import 'grid.less';
+
 @columns: 12;
 @column-width: 60;
 @gutter-width: 20;
 
 @total-width: 100%;
 
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
 
 #container {
 	margin: 2.25em auto;
