--- a/css/variables-mixins.less
+++ b/css/variables-mixins.less
@@ -10,6 +10,9 @@
 @DarkBlue: rgb(42, 101, 122);
 @Black: rgb(33, 56, 70);
 
+
+
+.color ()
 // Border Radius
 .border-radius(@radius: 5px) {
   -webkit-border-radius: @radius;
